Fixed Timestamp column binding and added DateTimeOffset converter.

--- a/EventDatabase/EventDatabase.csproj
+++ b/EventDatabase/EventDatabase.csproj
@@ -66,6 +66,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="DateTimeOffsetConverter.cs" />
     <Compile Include="Event.cs" />
     <Compile Include="EventType.cs" />
     <Compile Include="MainWindow.xaml.cs">
